force-app/main/default/objects/Opportunity/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <defaultValue>&apos;Net 30&apos;</defaultValue>
    <inlineHelpText>If you want to change this value to Net 45 or Net 60 then make the change to &quot;Requested Payment Term&quot;. It will trigger an auto email to the Accounting team. The value will get changed only post approval of the Accounting team.</inlineHelpText>
    <label>Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>