force-app/main/default/objects/Opportunity/fields/Payment_Terms_Approval__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Approval__c</fullName>
    <label>Payment Terms Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>