force-app/main/default/objects/Opportunity/fields/PO_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>PO_VAT_number__c</fullName>
    <label>PO/VAT number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>