force-app/main/default/objects/Opportunity/fields/Previous_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Bundle_Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Previous Opportunity)</relationshipLabel>
    <relationshipName>PreviousOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>