force-app/main/default/objects/Opportunity/fields/Print_Client_tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Print_Client_tax_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To print Client Tax Id under customer Name on workorder and invoice
Note: Client Tax Id is referred as Client NIT for South American clients.</inlineHelpText>
    <label>Print Client tax ID</label>
    <type>Checkbox</type>
</CustomField>