force-app/main/default/objects/Opportunity/fields/Print_Scope_T_C__c.field-meta.xml
<CustomField>
    <fullName>Print_Scope_T_C__c</fullName>
    <label>Print Scope/T&amp;C from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>