force-app/main/default/objects/Opportunity/fields/Program_Goal__c.field-meta.xml
<CustomField>
    <fullName>Program_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Goal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Goal__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Program_Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>