force-app/main/default/objects/Opportunity/fields/Program_List__c.field-meta.xml
<CustomField>
    <fullName>Program_List__c</fullName>
    <description>This field is populated by an apex trigger once the &quot;Program&quot; lookup field is populated. It also determines the values presented on the &quot;Engagement Type&quot; dependent field.
For internal IT use only.</description>
    <label>Program List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Technical Programs</fullName>
            </value>
            <value>
                <fullName>Alliance for Responsible Mining</fullName>
            </value>
            <value>
                <fullName>American Tree Farm System</fullName>
            </value>
            <value>
                <fullName>ASC Aquaculture</fullName>
            </value>
            <value>
                <fullName>Assure Certified</fullName>
            </value>
            <value>
                <fullName>Assure Certified Private Label</fullName>
            </value>
            <value>
                <fullName>Better Cotton Initiative (BCI)</fullName>
            </value>
            <value>
                <fullName>BIFMA level</fullName>
            </value>
            <value>
                <fullName>Biodegradable</fullName>
            </value>
            <value>
                <fullName>Biofuels</fullName>
            </value>
            <value>
                <fullName>Bonsucro</fullName>
            </value>
            <value>
                <fullName>Bonsucro Chain of Custody Certification</fullName>
            </value>
            <value>
                <fullName>Bonsucro EU Chain of Custody Certification</fullName>
            </value>
            <value>
                <fullName>Bonsucro EU Production Certification</fullName>
            </value>
            <value>
                <fullName>Bonsucro Production Certification</fullName>
            </value>
            <value>
                <fullName>Bonsucro Smallholder Certification</fullName>
            </value>
            <value>
                <fullName>BRCGS</fullName>
            </value>
            <value>
                <fullName>CanopyStyle</fullName>
            </value>
            <value>
                <fullName>Carbon Footprint Verification</fullName>
            </value>
            <value>
                <fullName>Carbon Neutral</fullName>
            </value>
            <value>
                <fullName>Carbon Offset Verification</fullName>
            </value>
            <value>
                <fullName>Carbon Offset Verification - Forestry</fullName>
            </value>
            <value>
                <fullName>Carbon Offset Verification - Other</fullName>
            </value>
            <value>
                <fullName>CDP Consulting</fullName>
            </value>
            <value>
                <fullName>Clearview</fullName>
            </value>
            <value>
                <fullName>Conflict Minerals Reporting</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Footprint Calculation</fullName>
            </value>
            <value>
                <fullName>Corporate Sustainability</fullName>
            </value>
            <value>
                <fullName>CSS Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>