force-app/main/default/objects/Opportunity/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Programc__r.Name</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>