force-app/main/default/objects/Opportunity/fields/Programc__c.field-meta.xml
<CustomField>
    <fullName>Programc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The selected program is deprecated, please select another program</errorMessage>
        <filterItems>
            <field>Program__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Deprecated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>