force-app/main/default/objects/Opportunity/fields/Project_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Project_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is set to true, when a project has been created by Flow.</description>
    <inlineHelpText>Checkbox is set to true, when a project has been created by Flow.</inlineHelpText>
    <label>Project Auto Created</label>
    <type>Checkbox</type>
</CustomField>