force-app/main/default/objects/Opportunity/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <label>Project Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDC STD DEVELOPMENT/REVISION - Template I</fullName>
            </value>
            <value>
                <fullName>No SDC STD DEVELOPMENT/REVISION - Template II</fullName>
            </value>
            <value>
                <fullName>ET1</fullName>
            </value>
            <value>
                <fullName>ET2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>