force-app/main/default/objects/Opportunity/fields/Project_Template_non_standard__c.field-meta.xml
<CustomField>
    <fullName>Project_Template_non_standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>inspire1__Project__c.inspire1__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>inspire1__Project__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Programc__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bundle Opportunity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_template</relationshipName>
    <type>Lookup</type>
</CustomField>