force-app/main/default/objects/Opportunity/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>&apos;Q&apos;+TEXT(CEILING( MONTH( CloseDate ) / 3 ))</formula>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>