force-app/main/default/objects/Opportunity/fields/Reason_for_change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change__c</fullName>
    <label>Reason for change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>