force-app/main/default/objects/Opportunity/fields/Recent_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source__c</fullName>
    <label>Recent Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Traffic_Source</valueSetName>
    </valueSet>
</CustomField>