force-app/main/default/objects/Opportunity/fields/Reporting_Division__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Division__c</fullName>
    <formula>TEXT(Programc__r.Reporting_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Division</label>
    <type>Text</type>
</CustomField>