force-app/main/default/objects/Opportunity/fields/Requested_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Requested_Payment_Term__c</fullName>
    <inlineHelpText>If you want to change the default value, please choose the value under “Requested Payment Term” and it will get changed post approval by Accounting Team.</inlineHelpText>
    <label>Requested Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upon_receipt</fullName>
                <label>Upon receipt</label>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>