force-app/main/default/objects/Opportunity/fields/Root_Folder_Override__c.field-meta.xml
<CustomField>
    <fullName>Root_Folder_Override__c</fullName>
    <formula>IF(CONTAINS($Label.Opportunity_RT_SCS_Global_Services, $RecordType.DeveloperName),Account.SharePoint_Folder_Id__c + &apos;,Opportunities&apos;, IF(CONTAINS($Label.Opportunity_RT_SCS_Consulting, $RecordType.DeveloperName),Account.SC_SharePoint_Folder_Id__c + &apos;,Opportunities&apos;,Account.SS_SharePoint_Folder_Id__c + &apos;,Opportunities&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Root Folder Override</label>
    <type>Text</type>
</CustomField>