force-app/main/default/objects/Opportunity/fields/Salesforce_Entity__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Entity__c</fullName>
    <label>Salesforce Entity 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECS</fullName>
            </value>
            <value>
                <fullName>Food and Agriculture</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>SCS Consulting</fullName>
            </value>
            <value>
                <fullName>SCS Standard</fullName>
            </value>
            <value>
                <fullName>Research and Development</fullName>
            </value>
            <value>
                <fullName>Advanced Technical Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>