force-app/main/default/objects/Opportunity/fields/Scheme_Approval__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheme Approval</label>
    <type>Checkbox</type>
</CustomField>