force-app/main/default/objects/Opportunity/fields/SCS_Probability__c.field-meta.xml
<CustomField>
    <fullName>SCS_Probability__c</fullName>
    <description>This field is created during Hypercare as a request from user to capture probability manually.</description>
    <label>SCS Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>