force-app/main/default/objects/Opportunity/fields/SCSWeek__c.field-meta.xml
<CustomField>
    <fullName>SCSWeek__c</fullName>
    <label>SCS Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>