force-app/main/default/objects/Opportunity/fields/SFWeek__c.field-meta.xml
<CustomField>
    <fullName>SFWeek__c</fullName>
    <formula>IF( 
  CEILING( (  CloseDate - DATE( YEAR( CloseDate ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( CloseDate - DATE( YEAR( CloseDate ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>