force-app/main/default/objects/Opportunity/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Account.ShippingStreet &amp; BR() &amp;
Account.ShippingCity &amp; &quot;, &quot; &amp;
Account.ShippingState &amp; &quot; &quot; &amp;
Account.ShippingPostalCode &amp; BR() &amp;
Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>