force-app/main/default/objects/Opportunity/fields/Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>Show_Discount__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Show Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>