force-app/main/default/objects/Opportunity/fields/Source_By_R_D__c.field-meta.xml
<CustomField>
    <fullName>Source_By_R_D__c</fullName>
    <label>Source By R&amp;D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>