force-app/main/default/objects/Opportunity/fields/Standard_Covered_Titles__c.field-meta.xml
<CustomField>
    <fullName>Standard_Covered_Titles__c</fullName>
    <label>Standard Covered Titles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>