force-app/main/default/objects/Opportunity/fields/Sub_Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Scope_Description__c</fullName>
    <label>Sub Scope Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>