force-app/main/default/objects/Opportunity/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>MOD(Datevalue(Closed_Date_Time__c) - DATE(1900, 1, 7), 7)</formula>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>