force-app/main/default/objects/Opportunity/fields/Total_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Amount__c</fullName>
    <label>Total Opportunity Amount</label>
    <summarizedField>OpportunityLineItem.Total_Sales_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>