force-app/main/default/objects/Opportunity/fields/Total_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Amount__c</fullName>
    <description>No more in use. Do not refer this field</description>
    <label>Total Sales Amount</label>
    <summarizedField>OpportunityLineItem.Total_Sales_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>notEqual</operation>
        <value>R - Reimbursable/Travel</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>