force-app/main/default/objects/Opportunity/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Opportunity with or without products
Total Opportunity Amount</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>