force-app/main/default/objects/Opportunity/fields/User_Goal__c.field-meta.xml
<CustomField>
    <fullName>User_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Goal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Goal__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>User_Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Opportunities (User Goal)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>