force-app/main/default/objects/Opportunity/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>CASE(
  MOD(CloseDate - DATE(1900, 1, 7), 7),
  5, (IF(
	  AND(
		VALUE( MID( TEXT( Closed_Date_Time__c), 12, 2 ) )&gt;=17,
		VALUE( MID( TEXT( Closed_Date_Time__c), 15, 2 ) )&gt;=0,
		VALUE( MID( TEXT( Closed_Date_Time__c), 18, 2 ) )&gt;0
	  ),
	  SFWeek__c+1,
	  SFWeek__c
	)),
  6, SFWeek__c + 1,
  0, SFWeek__c + 1,
  SFWeek__c
)</formula>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>