force-app/main/default/objects/Opportunity/fields/WO_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WO_Sent_Date_Time__c</fullName>
    <label>WO Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>