force-app/main/default/objects/Opportunity/fields/WO_Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WO_Signed_Date_Time__c</fullName>
    <label>WO Signed Date/Time</label>
    <type>DateTime</type>
</CustomField>