force-app/main/default/objects/Opportunity/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR( CloseDate ))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>