force-app/main/default/objects/Opportunity/recordTypes/Bundle_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Bundle_Opportunity</fullName>
    <active>true</active>
    <businessProcess>SCS Global Services Sales Process</businessProcess>
    <label>Bundle Opportunity</label>
</RecordType>