force-app/main/default/objects/Opportunity/recordTypes/ECS.recordType-meta.xml
<RecordType>
    <fullName>ECS</fullName>
    <active>true</active>
    <businessProcess>SCS Global Services Sales Process</businessProcess>
    <label>ECS</label>
</RecordType>