force-app/main/default/objects/Opportunity/recordTypes/Food_and_Agriculture.recordType-meta.xml
<RecordType>
    <fullName>Food_and_Agriculture</fullName>
    <active>true</active>
    <businessProcess>SCS Global Services Sales Process</businessProcess>
    <label>Food and Agriculture</label>
</RecordType>