force-app/main/default/objects/Opportunity/recordTypes/Natural_Resources.recordType-meta.xml
<RecordType>
    <fullName>Natural_Resources</fullName>
    <active>true</active>
    <businessProcess>SCS Global Services Sales Process</businessProcess>
    <label>Natural Resources</label>
</RecordType>