force-app/main/default/objects/Opportunity/recordTypes/Research_and_Development.recordType-meta.xml
<RecordType>
    <fullName>Research_and_Development</fullName>
    <active>true</active>
    <businessProcess>SCS Global Services Sales Process</businessProcess>
    <label>Research and Development</label>
</RecordType>