force-app/main/default/objects/Opportunity/recordTypes/SCS_Consulting.recordType-meta.xml
<RecordType>
    <fullName>SCS_Consulting</fullName>
    <active>true</active>
    <businessProcess>SCS Standard Sales Process</businessProcess>
    <label>SCS Consulting</label>
</RecordType>