force-app/main/default/objects/Opportunity/recordTypes/SCS_Standard.recordType-meta.xml
<RecordType>
    <fullName>SCS_Standard</fullName>
    <active>true</active>
    <businessProcess>SCS Standard Sales Process</businessProcess>
    <label>SCS Standard</label>
</RecordType>