force-app/main/default/objects/Opportunity/validationRules/AffiliateNameIsMandotory.validationRule-meta.xml
<ValidationRule>
    <fullName>AffiliateNameIsMandotory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Affiliate_Opportunity_flag__c=true ,  ISBLANK( Affiliate_Name__c )  )</errorConditionFormula>
    <errorMessage>Please fill affiliate name for affiliate opportunity</errorMessage>
</ValidationRule>