force-app/main/default/objects/Opportunity/validationRules/Billing_Contact_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Affiliate_Opportunity_flag__c = false,
ISPICKVAL(StageName,&quot;Closed Won&quot;),
ISBLANK( Billing_Contact__c ),
NOT(ISPICKVAL(LeadSource, &quot;Cvent&quot;)),
NOT($Permission.Bypass_Permission ),
NOT( Record_Type_Name__c = &apos;SCS_Standard&apos; ) 
)</errorConditionFormula>
    <errorDisplayField>Billing_Contact__c</errorDisplayField>
    <errorMessage>Billing Contact must be selected before setting the Stage to Closed Won</errorMessage>
</ValidationRule>