force-app/main/default/objects/Opportunity/validationRules/Cannot_change_the_stage_from_CW_CL.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_the_stage_from_CW_CL</fullName>
    <active>false</active>
    <description>Cannot_change_the_stage_from_CW\CL</description>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;),
ISCHANGED(StageName),
OR(
ISPICKVAL(StageName , &quot;Qualification&quot;),
ISPICKVAL(StageName , &quot;Needs Analysis&quot;),
ISPICKVAL(StageName , &quot;Proposal&quot;),
ISPICKVAL(StageName , &quot;Negotiation&quot;),
ISPICKVAL(StageName , &quot;Closed Lost&quot;)
)
),
AND(
ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Lost&quot;),
ISCHANGED(StageName),
OR(
ISPICKVAL(StageName , &quot;Qualification&quot;),
ISPICKVAL(StageName , &quot;Needs Analysis&quot;),
ISPICKVAL(StageName , &quot;Proposal&quot;),
ISPICKVAL(StageName , &quot;Negotiation&quot;),
ISPICKVAL(StageName , &quot;Closed Won&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>You cannot change the Stage when the Opportunity is Closed</errorMessage>
</ValidationRule>