force-app/main/default/objects/Opportunity/validationRules/Check_Contact_Role_on_stage_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Contact_Role_on_stage_change</fullName>
    <active>true</active>
    <description>Checking Contact Role is present on Opportunity</description>
    <errorConditionFormula>AND(
NOT( $Permission.Bypass_Permission ),CheckContactRole__c = True)</errorConditionFormula>
    <errorMessage>You can&apos;t change this Opportunity&apos;s stage as there is no primary contact role related to this opportunity.</errorMessage>
</ValidationRule>