force-app/main/default/objects/Opportunity/validationRules/Check_for_deprecated_program_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_deprecated_program_status</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Programc__r.Status__c, &apos;Deprecated&apos;))</errorConditionFormula>
    <errorMessage>Invalid Program : Program Status is Deprecated. Please select a valid Program</errorMessage>
</ValidationRule>