force-app/main/default/objects/Opportunity/validationRules/Lead_Source_required_for_New_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_required_for_New_Business</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type ,&quot;New Business&quot;),
OR(
ISCHANGED(Type),
ISNEW()
),
NOT( $Permission.Bypass_Permission ),
ISBLANK(TEXT(LeadSource))
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>For all New Business opportunities Lead Source is required</errorMessage>
</ValidationRule>