force-app/main/default/objects/Opportunity/validationRules/Lock_Close_Date_At_Closed_Won_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Close_Date_At_Closed_Won_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISCHANGED(StageName)),
 ISPICKVAL(StageName, &quot;Closed Won&quot;),
 ISCHANGED(CloseDate)   
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>We can&apos;t change the close date at the closed won stage.</errorMessage>
</ValidationRule>