force-app/main/default/objects/Opportunity/validationRules/Project_Template_Required_Close_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Template_Required_Close_Won</fullName>
    <active>true</active>
    <description>Project Template is a mandatory field before closing the opportunity as Closed Won.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISBLANK(Text(Project_Template__c)),
(RecordType.DeveloperName = &apos;SCS_Standard&apos;)
)</errorConditionFormula>
    <errorMessage>Project Template is a mandatory field before closing the opportunity as Closed Won.</errorMessage>
</ValidationRule>